# casl_p4est

./: .clang_complete  .gitignore  CMakeLists.txt  COPYING  Instructions for Mac M1.md  Instructions for Stampede2.md  LICENSE  Makefile  Makefile.juqueen  Makefile.navierstokes  README.md  common.mk  libparcasl.cmake  tags
cmake/: casl_generic.cmake  casl_laptop24.cmake  darkness.cmake  faranak.cmake  harrow.cmake  libparcasl.cmake  mtxt.cmake  persephone.cmake  sam.cmake  saturn.cmake  stampede2.cmake  txt.cmake  vincent.cmake  zea.cmake
config/: common.pri  homebrew.pri  libparcasl.pri  linux.pri  stampede.pri
doc/: installing_libraries_on_pod_04_27_2020.txt  mynodes.txt  readme.txt  semilagrangian.tex  tasks.txt
examples/: create_example  create_example.sh  create_makefile  newexample  newprofile
examples/diffusion_nodes_mls/: CMakeLists.txt  heat_convergence_analysis.cpp  heat_convergence_analysis.h  heat_problem_definitions.h  heat_test_cases.cpp  heat_test_cases.h  main_heat_solver.cpp
examples/ml_curvature/: CMakeLists.txt  README.md  all_num_curvatures_3d.cpp  exploring_star_shapes.m  finding_hk_spectrum_2d.cpp  frugally_deep_test.cpp  local_utils.h  main_2d.cpp  main_3d.cpp  triangulation_distance_test.cpp
examples/ml_curvature/data_sets/: arclength_parameterized_sine_2d.h  convergence2_sphere_datasets_2d.cpp  convergence_sphere_datasets_2d.cpp  gaussian_3d.h  gaussian_dataset_3d.cpp  gaussian_test_3d.cpp  level_set_patch_3d.h  merging_spheres_datasets_2d.cpp  merging_stars_datasets_2d.cpp  merging_stars_example_1.h  paraboloid_3d.h  paraboloid_test_3d.cpp  sinewave_levelset_test_2d.cpp  sinusoidal_3d.h  sinusoidal_dataset_3d.cpp  sinusoidal_datasets_2d.cpp  sinusoidal_test_3d.cpp  sphere_dataset_3d.cpp  sphere_dataset_3d_alt_rand.cpp  sphere_datasets_2d.cpp  star_datasets_2d.cpp  star_theta_root_finding.h  two_spheres_levelset_2d.h  vortex_datasets_2d.cpp
examples/ml_curvature/data_sets/ellipsoid/: ellipsoid_3d.h  ellipsoid_dataset_3d.cpp  ellipsoid_single_dataset_3d.cpp
examples/ml_curvature/data_sets/gaussian/: gaussian_3d.h  gaussian_dataset_3d.cpp  gaussian_single_dataset_3d.cpp  gaussian_test_3d.cpp
examples/ml_curvature/data_sets/hyp_paraboloid/: hyp_paraboloid_3d.h  hyp_paraboloid_dataset_3d.cpp  hyp_paraboloid_single_dataset_3d.cpp
examples/ml_curvature/data_sets/paraboloid/: paraboloid_3d.h  paraboloid_dataset_3d.cpp  paraboloid_single_dataset_3d.cpp
examples/ml_curvature/data_sets/sinusoid/: sinusoidal_3d.h  sinusoidal_dataset_3d.cpp  sinusoidal_datasets_2d.cpp  sinusoidal_single_dataset_3d.cpp
examples/ml_curvature/data_sets/sphere/: large_spheres_test.cpp  many_merged_spheres.cpp  sphere_dataset_3d.cpp  sphere_dataset_3d_alt_rand.cpp
examples/ml_curvature/data_sets/star/: star_datasets_2d.cpp
examples/ml_curvature/dlib/: dlib_optimization_example.cpp  dlib_paraboloid_example.cpp
examples/ml_curvature/matlab/: balltree_2d.m  class_criterion.m  drawCube.m  exploring_star_shapes.m  findClosestPointOnLineSegmentToPoint.m  findClosestPointOnTriangleToPoint.m  findZero.m  gaussian_3d.m  gaussian_3d_adjusted_domain.m  gaussian_sampling.m  gaussian_triangles.m  hyp_paraboloid_3d.m  paraboloid_3d.m  paraboloid_3d_adjusted_domain.m  paraboloid_3d_domain.m  paraboloid_triangles.m  principal_curvatures.m  projectPointOnTriangleAndPlane.m  rayPlaneIntersection.m  reflections_3d.m  sinusoid_3d.m  testDistanceToTriangle.m  triangles.m
examples/ml_curvature/old_mlds/: README.md  old_mlds_adaptiveFlowerDatasets.cpp  old_mlds_flowerDatasets.cpp
examples/ml_curvature/online_tests/: ellipsoid_test_3d.cpp  hyp_paraboloid_test_3d.cpp  morphing_ellipsoid_test_3d.cpp  paraboloid_test_3d.cpp  sphere_convergence_octree_test_3d.cpp  sphere_convergence_test_3d.cpp  sphere_convergence_uniform_test_3d.cpp  test_utils_3d.h
examples/ml_mass_conservation/: CMakeLists.txt  CoarseGrid.h  Utils.h  VelocityField.h  main_2d.cpp  main_3d.cpp  main_test_2d.cpp  open_blas_benchmark.cpp  rotation_2d.cpp  rotation_vortex_patch_2d.cpp  stefan_2d.cpp  vortex_2d.cpp
examples/ml_mass_conservation/data_sets/: CoarseGrid.h  generate_data_sets_2d.cpp
examples/multialloy_with_fluids/: CMakeLists.txt  examples_for_stefan_with_fluids.h  main_2d-archived.cpp  main_2d.cpp  main_2d_full_multialloy_w_NS_not_working.cpp  main_2d_multicomponent_stefan.cpp  main_2d_refine_w_fields.cpp  multialloy_with_fluids.pri
examples/poisson_nodes_mls_nick/: CMakeLists.txt  main_2d-2_20_24.cpp  main_2d_2-12-24.cpp  main_2d_2_14_24.cpp  main_2d_2_21_24.cpp  main_2d_2_26_24.cpp
examples/porous_media/: CMakeLists.txt  CMakeListsVincent.txt  main_2d.cpp  two_grains.sh
examples/porous_media/runs/: Concentration_state_pvsm.txt
examples/porous_media/runs/10_grains_porous_media/: porous_media_10_grains.sh
examples/porous_media/runs/10_grains_porous_media/geometry/: rvals.txt  xshifts.txt  yshifts.txt
examples/porous_media/runs/Plot_porous_media/: plot_porous_media.py
examples/porous_media/runs/two_grains/: two_grains_test1.sh  two_grains_test2.sh
examples/shs_channel_flow/: CMakeLists.txt  main_2d.cpp  my_p4est_shs_channel.h  my_p8est_shs_channel.h  shs_channel_flow.pri  understanding_main_2d.cpp  understanding_main_3d.cpp
paper/: README.md  parse_log.m
proposal/: charging_linear_2d.cpp  charging_linear_2d.h  charging_linear_3d.h  geometry.pro  geometry_2d.cpp  oxygen_2d.cpp  preprocess.py  solver.pro  solver_2d.cpp  solver_3d.cpp  solver_linear_2d.cpp
qmake/: common.pri  daniil-laptop-openmpi.pri  daniil-laptop.pri  daniil-office.pri  elyce-darkness.pri  elyce-laptop.pri  elyce-office.pri  faranak.pri  fgibou_LinuxMachine.pri  ivana-office.pri  libparcasl.pri  libparcasl_poisson_jump_cells.pri  libparcasl_xgfm.pri  linux.pri  macx.pri  new_environment  raphael-office.pri  raphael_abaddon.pri  raphael_cain.pri  raphael_darkness.pri  raphael_darkness_64_bits.pri  raphael_leviathan.pri  raphael_pod.pri  raphael_pod_64_bits.pri  raphael_pod_intel_18.pri  raphael_stampede.pri  rochi-darkness.pri  rochiMac.pri  rochiPC.pri  rochi_office.pri  srclist.pri  stampede.pri  users-Garnet.pri  (+4 more)
(+1550 files in other folders)
